feat: Make branding configurable for public release
- Add /branding endpoint serving name, emoji, description
- PWA fetches branding on load (falls back to Moltbot defaults)
- Server reads ASSISTANT_NAME and ASSISTANT_EMOJI from env vars
- Add CHATTERBOX_VOICE env var for Chatterbox TTS
- Update config to support both ~/.moltbot and ~/.clawdbot paths
- Create .env.example files documenting all options
- Remove hardcoded 'Vincent' references throughout
- Update READMEs with customization documentation

Defaults:
- Name: Moltbot
- Emoji: 🦞
- Description: Hands-free voice interface for Moltbot

--- a/pwa/.env.example
+++ b/pwa/.env.example
@@ -1,5 +1,10 @@
-# Proxy server WebSocket URL
-# Leave empty for demo mode (UI testing only)
-# For local dev: ws://localhost:3001/ws
-# For production: wss://your-proxy.example.com/ws
-VITE_PROXY_URL=
+# The Ear - PWA Configuration
+# Copy to .env and fill in values (or set at build time)
+
+# =============================================================================
+# Proxy Connection
+# =============================================================================
+
+# WebSocket URL for the proxy server
+# Default: ws://localhost:3001/ws (for local development)
+VITE_PROXY_URL=wss://your-proxy-server.example.com/ws
