chore: Rebrand from 'The Ear' to 'Moltbot Voice Bridge'
- Update all package names to moltbot-voice-bridge
- Update all file headers and comments
- Update README titles and descriptions
- Update PWA manifest name and paths
- Update GitHub Pages base path to /moltbot-voice-bridge/
- Update gateway client displayName

--- a/pwa/.env.example
+++ b/pwa/.env.example
@@ -1,4 +1,4 @@
-# The Ear - PWA Configuration
+# Moltbot Voice Bridge - PWA Configuration
 # Copy to .env and fill in values (or set at build time)
 
 # =============================================================================
