--- a/pwa/package.json
+++ b/pwa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-ear",
+  "name": "moltbot-voice-bridge",
   "version": "1.0.0",
   "description": "Hands-free voice interface for Moltbot",
   "type": "module",
