--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-# The Ear - Server Configuration
+# Moltbot Voice Bridge - Server Configuration
 # Copy to .env and fill in values
 
 # =============================================================================
