--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,9 @@
     "build": "tsc",
     "start": "node --env-file=.env dist/index.js",
     "dev": "tsc --watch & nodemon dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:groq": "node dist/test-groq.js",
     "test:gateway": "node dist/test-gateway.js",
     "test:tts": "node dist/test-tts.js",
@@ -15,14 +18,15 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.16.0",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.19.30",
     "@types/ws": "^8.5.10",
+    "nodemon": "^3.0.2",
     "typescript": "^5.3.0",
-    "nodemon": "^3.0.2"
+    "vitest": "^4.0.18"
   }
 }
