Self-hosting setup and customizable branding
- Remove GitHub Pages workflow (self-host instead)
- Add VITE_BOT_NAME, VITE_BOT_EMOJI, VITE_BOT_DESCRIPTION env vars
- Update vite.config.ts to use env vars in PWA manifest
- Update stores.ts and App.svelte to use env vars for branding
- Update READMEs with new deployment and configuration docs
- Add .gitignore for shell scripts
- Remove PLAN.md

--- a/pwa/.env.example
+++ b/pwa/.env.example
@@ -8,3 +8,16 @@
 # WebSocket URL for the proxy server
 # Default: ws://localhost:3001/ws (for local development)
 VITE_PROXY_URL=wss://your-proxy-server.example.com/ws
+
+# =============================================================================
+# Branding
+# =============================================================================
+
+# Bot display name
+VITE_BOT_NAME=Moltbot
+
+# Bot emoji/icon
+VITE_BOT_EMOJI=🦞
+
+# Description shown in UI and PWA manifest
+VITE_BOT_DESCRIPTION=Hands-free voice interface for Moltbot
